--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </header>
 
   <main class="container">
-    
+
     <img src="src/images/illustration-mockups.svg" alt="illustration-mockups">
 
     <div class="introduction">
@@ -47,11 +47,11 @@
   </main>
 
   <footer class="footer">
-
-      <a href="#"><i class="fab fa-facebook-f fa-border"></i></a>
-      <a href="#"><i class="fab fa-twitter fa-border"></i></a>
-      <a href="#"><i class="fab fa-instagram fa-border"></i></a>
-  
+    <nav>
+        <li><a href="#"><i class="fab fa-facebook-f fa-border"></i></a></li>
+        <li><a href="#"><i class="fab fa-twitter fa-border"></i></a></li>
+        <li><a href="#"><i class="fab fa-instagram fa-border"></i></a></li>
+    </nav>
   </footer>
 
 </body>
